# TXT-Search-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildproject.sh  downloadBooks.py  requirements.txt  runproject.sh  testproject.sh
.github/workflows/: cmakeCI.yml  conventional_commit_check.yml
GutenbergBooks/: Because of conscience : by Amy Ella Blanchard (480).txt  The Odysseys of Homer, together with the shorter poems by Homer (986).txt  The little book of life after death by Gustav Theodor Fechner (977).txt  The wolf pack by Ridgwell Cullum (611).txt
include/: Arraylist.h  CMakeLists.txt  Hashmap.h  LinkedList.h  Parser.h  arraylist.h  fileReader.h  hashmap.h  initialiser.h  mergeSort.h  searchIndex.h  serialiseArraylist.h  trie.h
src/: CMakeLists.txt  Hashmap.cpp  Parser.cpp  fileReader.cpp  hashmap.cpp  initialiser.cpp  main.cpp  mergeSort.cpp  searchIndex.cpp  serialiseArraylist.cpp  trie.cpp
tests/: CMakeLists.txt  arraylist_test.cc  arraylist_test.cpp  hashmap_test.cc  hashmap_test.cpp  mergeSort_test.cpp  parser_test.cc  searchIndex_test.cc  serialiseArrayList_test.cc  trie_test.cc
